# go-docker

./: README.md  main.go
.devcontainer/: devcontainer.json
example/daemon-cpp/: Dockerfile
example/daemon-cpp/hello-world/: CMakeLists.txt
example/daemon-cpp/hello-world/include/logic/: Data.hpp
example/daemon-cpp/hello-world/include/server/: XMLRPCAbyssServer.hpp  XMLRPCMethods.hpp
example/daemon-cpp/hello-world/src/: Daemon.cpp  Data.cpp  XMLRPCAbyssServer.cpp  XMLRPCMethods.cpp
